since this behavior is superfluous for proxied geometry.

Added -r option to bsdf2rad (and bsdfview) to fix BSDF min and max range
for comparing BSDFs.

Fixed issue with pfilt -m option and uneven image size changes pointed
out by Rob Shakespeare.

Updates to evalglare and gendaylit from Jan Wienold, including new
colored sky option.

=========================
Version 5.3

Created radcompare program to compare Radiance tool output to reference outputs
during unit-testing.

Fixed issue reading very large files (> 2 GBytes) in rcollate.

Made picking function in rvu ignore transparent and void surfaces.

Added -orRxX options to rtrace to enable output of mirrored and unmirrored
contributions and distances to enable new types of reprojections.  This also
cleaned up and unified handling of effective ray lengths throughout code.

Bug fixes from Jan Wienold for evalglare.

Changed indexed (numbered) output from dctimestep to start from 0 rather
than 1, to make it more consistent with expected input naming.

Increased default sampling in bsdf2klems (-n option) to 1024.

Fixed an issue noticed by David G-M that was causing genBSDF to bias
isotropic tensor tree samples resulting in subsequent failure of
peak extraction with "aBSDF" type.

Introduced max() and min() functions to .cal library.

Added random incident patch sampling to bsdf2klems to improve accuracy
with scattering interpolation representation input (e.g., from
pabopto2bsdf).  The other input types already sampled incident patch area.

Added gendaymtx -A option to compute average sky over all the input
time steps.

Added ability to output color image from rtrace with any of -ovrx options.

Changed rlam behavior so -iaN reads N lines from a stream rather than N
characters.  This seems more useful, since -ibN is somewhat redundant with
the old behavior.

Created rsplit program as compliment to rlam and to handle more complex
rtrace output into separate files or streams.